Add new, more modular implementation of this wrapper

--- a/example-projects/libarchive-wrapper/Makefile
+++ b/example-projects/libarchive-wrapper/Makefile
@@ -1,2 +1,9 @@
+# makefile doesn't look good without a comment here :-)
+
+default: build
+
+run: build
+	./main
+
 build:
-	valac main.vala archivist.vala raw-archive.vala --pkg libarchive --pkg glib-2.0 --pkg gio-unix-2.0
+	valac main.vala archive-utils.vala rw-archive.vala read-archive.vala write-archive.vala --pkg libarchive --pkg glib-2.0 --pkg gio-unix-2.0
