--- a/example-projects/libarchive-wrapper/Makefile
+++ b/example-projects/libarchive-wrapper/Makefile
@@ -6,4 +6,4 @@ run: build
 	./main
 
 build:
-	valac main.vala archive-utils.vala rw-archive.vala read-archive.vala write-archive.vala --pkg libarchive --pkg glib-2.0 --pkg gio-unix-2.0
+	valac main.vala archive-utils.vala archive-reader.vala write-archive.vala --pkg libarchive --pkg glib-2.0 --pkg gio-unix-2.0
